--- a/templates/header.html
+++ b/templates/header.html
@@ -10,12 +10,13 @@
 		<div class="header_ib header_city">
 			<span>Ваш город:</span>
 			<a href="#cities_modal" class="header_choose_city open_modal">Москва<span class="arrow-down"></span></a>
-			<div class="popup correct_city">
-				<label>Всё верно?</label>
-				<a href="#" class="button-o small pink popup_close">Да</a>
-				<a href="#cities_modal" class="button-o small gray open_modal popup_close">Нет</a>
-				<a href="#" class="close_popup">x</a>
-			</div>
+
+<!--			<div class="popup correct_city">-->
+<!--				<label>Всё верно?</label>-->
+<!--				<a href="#" class="button-o small pink popup_close">Да</a>-->
+<!--				<a href="#cities_modal" class="button-o small gray open_modal popup_close">Нет</a>-->
+<!--				<a href="#" class="close_popup">x</a>-->
+<!--			</div>-->
 		</div>
 
 		<div class="header_ib header_phone_box">
@@ -23,11 +24,11 @@
 		</div>
 
 		<div class="header_ib header_wishlist_ib">
-			<a href="" class="header_link header_wishlist">Избранное <span class="header_count">2</span></a>
+			<a href="" class="header_link header_wishlist">Избранное <span class="header_count">0</span></a>
 		</div>
 
 		<div class="header_ib header_cart_ib">
-			<a href="{% url 'basket:index' %}" class="header_link header_cart">Корзина <span class="header_count">27</span></a>
+			<a href="{% url 'basket:index' %}" class="header_link header_cart">Корзина <span class="header_count">0</span></a>
 		</div>
 
 		<div class="header_ib header_profile_ib">
