--- a/templates/index.html
+++ b/templates/index.html
@@ -27,15 +27,11 @@
 			<a href="catalog.html" class="button"><span class="icon_shock"></span> Шок-цена!</a>
 
 			<nav class="catalog_menu_box">
-				<div class="catalog_mobile_titles">
-					<img src="img/logo.png" alt="">
-					<a href="#" class="close_modal">x</a>
-				</div>
 				{% catalog_menu %}
 			</nav>
 		</div>
 
-		<img class="mobile_logo" src="img/logo.png" alt="" />
+		<img class="mobile_logo" src="{% static 'img/logo.png' %}" alt="" />
 
 		<form action="" method="post" class="topnav_search_form">
 			<input type="text" placeholder="Например, сковорода вок" class="topnav_search_input" />
@@ -45,78 +41,13 @@
 			<div class="search_dropdown mCustomScrollbar" data-mcs-theme="minimal-dark">
 				<!-- ITEM -->
 				<div class="search_dropdown_product">
-					<a href="product.html" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
+					<a href="product.html" class="sdp_image"><img src="{% static 'img/prod_1.jpg' %}" alt=""></a>
 					<div class="sdp_info_box">
 						<a href="product.html">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
 						<div class="sdp_artnum">Артикул: 9610</div>
 						<div class="sdp_prices">
 							<span class="sdp_price">1390 ₽</span>
 							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="product.html" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="product.html">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="product.html" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="product.html">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="product.html" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="product.html">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="product.html" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="product.html">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="product.html" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="product.html">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
 						</div>
 					</div>
 				</div>
@@ -133,8 +64,8 @@
 		</ul>
 
 		<div class="top_mobile_buttons">
-			<a class="open_mobile_search" href=""><img src="img/i_search.png" /></a>
-			<a class="open_mobile_cart" href=""><img src="img/i_mini-cart.png" /></a>
+			<a class="open_mobile_search" href=""><img src="{% static 'img/i_search.png' %}" /></a>
+			<a class="open_mobile_cart" href=""><img src="{% static 'img/i_mini-cart.png' %}" /></a>
 		</div>
 
 	</div>
@@ -204,14 +135,18 @@
 								<img src="{{ im.url }}" alt="" />
 							{% endthumbnail %}
 						</a>
-						<a href="" class="product_item-title">{{ prod.name }}</a>
-						<div class="product_item-artnum">Артикул: 9610</div>
+						<a href="{% url 'catalog:product-detail' prod.pk %}" class="product_item-title">{{ prod.name }}</a>
+						<div class="product_item-artnum">Артикул: {{ prod.artikul }}</div>
 						<div class="product_item-prices">
-							<u class="product_item-price_old">1390 ₽</u>
-							<span class="product_item-price">990 ₽</span>
+							{% if prod.price_old %}
+								<u class="product_item-price_old">{{ prod.price_old }} ₽</u>
+							{% endif %}
+							<span class="product_item-price">{{ prod.price }} ₽</span>
 						</div>
 						<div class="product_item-buttons">
+							{% comment %}
 							<span class="product_added visible">Добавлен в корзину</span>
+							{% endcomment %}
 							<a href="#" class="button-o gray product_item-buy">В корзину</a>
 							<div class="product_item-counter_box">
 								<div class="counter_box">
@@ -219,7 +154,7 @@
 									<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
 									<button type="button" class="counter_ctrl plus">+</button>
 								</div>
-								<button class="button add_to_cart_small"><img src="img/i_cart.png" alt="" /></button>
+								<button class="button add_to_cart_small"><img src="{% static 'img/i_cart.png' %}" alt="" /></button>
 								<a href="#" class="close_add_to_cart">x</a>
 							</div>
 							<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
@@ -244,7 +179,7 @@
 					Хочу скидку
 				</a>
 			</div>
-			<img src="img/logo_small.png" class="discount_logo" />
+			<img src="{% static 'img/logo_small.png' %}" class="discount_logo" />
 		</div>
 
 
@@ -261,18 +196,20 @@
 
 							<span class="beidge leader">Лидер продаж</span>
 						</div>
-						<a href="" class="product_item-image">
+						<a href="{{ prod.img.url }}" class="product_item-image">
 							{% thumbnail prod.img "189x135" crop="center" as im %}
 								<img src="{{ im.url }}" alt="" />
 							{% endthumbnail %}
 						</a>
-						<a href="" class="product_item-title">{{ prod.name }}</a>
-						<div class="product_item-artnum">Артикул: 9610</div>
+						<a href="{% url 'catalog:product-detail' prod.pk %}" class="product_item-title">{{ prod.name }}</a>
+						<div class="product_item-artnum">Артикул: {{ prod.artikul }}</div>
 						<div class="product_item-prices">
-							<span class="product_item-price">990 ₽</span>
+							<span class="product_item-price">{{ prod.price }} ₽</span>
 						</div>
 						<div class="product_item-buttons">
+							{% comment %}
 							<span class="product_added">Добавлен в корзину</span>
+							{% endcomment %}
 							<a href="#" class="button-o gray product_item-buy">В корзину</a>
 							<div class="product_item-counter_box">
 								<div class="counter_box">
@@ -280,7 +217,7 @@
 									<input type="text" class="counter_input" value="1" data-min="1" data-max="99" />
 									<button type="button" class="counter_ctrl plus">+</button>
 								</div>
-								<button class="button add_to_cart_small"><img src="img/i_cart.png" alt="" /></button>
+								<button class="button add_to_cart_small"><img src="{% static 'img/i_cart.png' %}" alt="" /></button>
 								<a href="#" class="close_add_to_cart">x</a>
 							</div>
 							<a href="" class="product_item-like"><i class="fa fa-heart-o"></i></a>
@@ -310,279 +247,7 @@
 
 </div>
 
-
-<!-- MODAL -->
-<div class="modal" id="add_address_modal">
-	<div class="modal_content">
-		<h2 class="modal_title">Добавить новый адрес</h2>
-		<a href="#" class="modal_close">x</a>
-		<form action="" method="post">
-			<div class="ip_cell">
-				<div>
-					<input type="radio" class="rd" name="delivery-modal" />
-					<label>Самовывоз</label>
-					<input type="radio" class="rd" name="delivery-modal" />
-					<label>Доставка по адресу</label>
-				</div>
-			</div>
-			<div class="ip_cell">
-				<input type="text" class="input_text" placeholder="Укажите город доставки" />
-			</div>
-			<div class="ip_cell">
-				<input type="text" class="input_text" placeholder="Укажите адрес доставки" />
-			</div>
-			<div class="modal_buttons">
-				<button class="button medium" type="submit">+ Добавить адрес</button>
-			</div>
-		</form>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-<a href="#" class="minicart_open visible">
-	<span class="minicart_count">17</span>
-	<div class="button"><img src="img/i_cart_big.png" alt="" /></div>
-</a>
-
-
-<div class="modal" id="modal_minicart">
-	<div class="minicart_content">
-		<header>
-			<h2 class="modal_title">Ваша корзина</h2>
-			<a href="#" class="modal_close">x</a>
-		</header>
-		<section class="minicart_list mCustomScrollbar">
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="product_price_old">89390 ₽</div>
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-		</section>
-		<footer class="minicart_footer">
-			<div class="minicart_total_price">Итого: <b>3495 ₽</b></div>
-			<p>Чтобы узнать стоимость доставки, перейдите к оформлению заказа.</p>
-
-			<div class="minicart_buttons">
-				<a href="order.html" class="button medium">Оформить заказ</a>
-				<a href="basket.html" class="button-o gray medium">Перейти к корзине</a>
-			</div>
-		</footer>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-
-<div class="modal" id="cities_modal">
-	<div class="modal_content">
-		<h2 class="modal_title">Выберите город</h2>
-		<a href="#" class="modal_close">x</a>
-		<form action="" method="post">
-			<div class="cities_list">
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Москва</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Волгоград</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Воронеж</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Екатеринбург</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Казань</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Краснодар</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Красноярск</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Нижний Новгород</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Новосибирск</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Пермь</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Ростов-на-Дону</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Самара</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" checked />
-					<label>Санкт-Петербург</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Уфа</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Челябинск</label>
-				</div>
-			</div>
-
-			<div class="another_city_box">
-				<label>Или укажите в поле:</label>
-				<div class="flex">
-					<div class="ip_cell relative">
-						<input type="text" class="input_text another_city" placeholder="Введите название города" />
-						<div class="cities_dropdown">
-							<a class="city_dropdown" href=""><b>Иван</b>теевка, Московская обл.</a>
-							<a class="city_dropdown" href=""><b>Иван</b>ово, Московская обл.</a>
-						</div>
-					</div>
-					<button class="button medium choice_city"  type="submit" disabled>Выбрать</button>
-				</div>
-			</div>
-			<script>
-				$(document).ready(function(){
-					$('.another_city').on('change keyup', function(){
-						if ( $(this).val() != '' ) {
-							$('.cities_dropdown').show();
-							$('.choice_city').removeAttr('disabled');
-						} else {
-							$('.cities_dropdown').hide();
-							$('.choice_city').attr('disabled', true);
-						}
-					});
-
-					$('.city_dropdown').click(function(){
-						let cityName = $(this).text();
-						$('.another_city').val(cityName);
-						$('.cities_dropdown').hide();
-						return false;
-					});
-				});
-			</script>
-		</form>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-
-<div class="modal" id="login_modal">
-	<div class="modal_content">
-		<a href="#" class="modal_close">x</a>
-		<h2 class="modal_title">Вход</h2>
-		<form action="cabinet.html" method="post" class="auth_form">
-			<div class="ip_cell">
-				<input type="text" class="input_text" placeholder="Логин" />
-			</div>
-			<div class="ip_cell">
-				<input type="password" class="input_text" placeholder="Пароль" />
-			</div>
-			<div class="login_links">
-				<div>
-					<input type="checkbox" class="ch" />
-					<label>Сохранить пароль</label>
-				</div>
-				<a href="">Восстановить пароль</a>
-			</div>
-			<div class="auth_buttons">
-				<button class="button medium" type="submit">Войти</button>
-				<a href="" class="button-o medium gray">Зарегистрироваться</a>
-			</div>
-		</form>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
+{% include 'all_modals.html' %}
 
 {% include 'js_files.html' %}
 
