--- a/templates/product.html
+++ b/templates/product.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load thumbnail %}
 {% load catalog_tags %}
 <!DOCTYPE html>
 <html lang="ru">
@@ -28,10 +29,6 @@
 			<a href="catalog.html" class="button"><span class="icon_shock"></span> Шок-цена!</a>
 
 			<nav class="catalog_menu_box">
-				<div class="catalog_mobile_titles">
-					<img src="img/logo.png" alt="">
-					<a href="#" class="close_modal">x</a>
-				</div>
 				{% catalog_menu %}
 			</nav>
 		</div>
@@ -69,58 +66,7 @@
 						</div>
 					</div>
 				</div>
-				
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
 
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
-				
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock">В наличии</span>
-						</div>
-					</div>
-				</div>
-
-				<!-- ITEM -->
-				<div class="search_dropdown_product">
-					<a href="" class="sdp_image"><img src="img/prod_1.jpg" alt=""></a>
-					<div class="sdp_info_box">
-						<a href="">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-						<div class="sdp_artnum">Артикул: 9610</div>
-						<div class="sdp_prices">
-							<span class="sdp_price">1390 ₽</span>
-							<span class="instock not">Нет в наличии</span>
-						</div>
-					</div>
-				</div>
 
 				<a href="" class="button search_see_all">Показать все</a>
 				
@@ -147,9 +93,9 @@
 	<div class="container">
 		
 		<ul class="bread">
-			<li><a href="">Главная</a></li>
-			<li><a href="">Каталог</a></li>
-			<li>Сковороды</li>
+			<li><a href="/">Главная</a></li>
+			<li><a href="{% url 'catalog:category-detail' product.category.slug %}">{{ product.category.name }}</a></li>
+			<li>{{ product.name }}</li>
 		</ul>
 
 	</div>
@@ -163,39 +109,26 @@
 				<div class="product_titles">
 					<a href="" class="product_like"><i class="fa fa-heart-o"></i></a>
 					<!-- <a href="" class="product_like liked"><i class="fa fa-heart"></i></a> -->
-					<h1>Cковорода для жарки STORM 24х5см (алюминий)</h1>
-					<div class="artikul">Артикул: 353825</div>
+					<h1>{{ product.name }}</h1>
+					<div class="artikul">Артикул: {{ product.artikul}}</div>
 				</div>
 				<div class="product_flex_box">
 					<div class="product_images_box">
-						<a href="{% static 'img/product_big.jpg' %}" class="product_main_image fancy" data-fancybox="product">
-							<img src="{% static 'img/product_big.jpg' %}" alt="" />
+						<a href="{{ product.img.url }}" class="product_main_image fancy" data-fancybox="product">
+							{% thumbnail product.img "200x200" crop="center" as im %}
+							<img src="{{ im.url }}" alt="" />
+							{% endthumbnail %}
 						</a>
-						<div class="product_thumbs_box">
-							<a href="{% static 'img/product_big.jpg' %}" class="product_thumb active" data-fancybox="product"><img src="{% static 'img/product_big_thumb.jpg' %}" alt=""></a>
-							<a href="{% static 'img/product_big2.jpg' %}" class="product_thumb" data-fancybox="product"><img src="{% static 'img/product_big2_thumb.jpg' %}" alt=""></a>
-							<a href="{% static 'img/product_big.jpg' %}" class="product_thumb" data-fancybox="product"><img src="{% static 'img/product_big_thumb.jpg' %}" alt=""></a>
-						</div>
 					</div>
 
 					<div class="product_info_box">
-						
-						<h4 class="product_option_label">Другие размеры:</h4>
-						<div class="product_options_row">
-							<input type="radio" class="product_option_rd" name="size" checked />
-							<label>28 cv</label>
-							<input type="radio" class="product_option_rd" name="size" />
-							<label>30 cv</label>
-							<input type="radio" class="product_option_rd" name="size" />
-							<label>40 cv</label>
-						</div>
+
 						<article class="product_desc">
-							<p>Cковорода STORM изготовлена из алюминия с керамическим антипригарным
-							покрытием BioEcoCeramica. Керамическое покрытие BioEcoCeramica
-							последнего поколения, создано с учетом самых жестких экологических норм.
-							Сковорода устойчива к царапинам и высоким температурам. На сковороде
-							можно готовить без масла или с минимальным его количеством. Не содержит
-							PFОА. Можно мыть в посудомоечной машине.</p>
+							<p>Описание</p>
+							<p>Описание</p>
+							<p>Описание</p>
+							<p>Описание</p>
+							<p>Описание</p>
 						</article>
 						<div class="product_anchors">
 							<a href="#specs" class="product_anchor">Харакетристики</a>
@@ -620,326 +553,8 @@
 
 
 <!-- MODAL -->
+{% include 'all_modals.html' %}
 
-<div class="modal" id="write_review_modal">
-	<div class="modal_content">
-		<h2 class="modal_title centered">
-			Отзыв о товаре
-			<span class="modal_subtitle">Сковорода для жарки STORM  24x5см (алюминий)</span>
-		</h2>
-		<a href="#" class="modal_close">x</a>
-		<form action="" method="post">
-			<p>Благодарим за выбор посуды Fissman. Пожалуйста, оставьте  честное мнение о товаре, чтобы другим покупателям было проще сделать выбор.</p>
-			<div class="ip_cell">
-				<input type="text" class="input_text" placeholder="Имя *" />
-			</div>
-			<div class="ip_cell">
-				<input type="email" class="input_text" placeholder="E-mail (не будет опубликован) *" />
-			</div>
-			<div class="ip_cell">
-				<textarea class="input_text" placeholder="Опишите, что вам особенно понравилось."></textarea>
-			</div>
-			<div class="ip_cell">
-				<textarea class="input_text" placeholder="Напишите, есть ли какие-то минусы у товара."></textarea>
-			</div>
-			<div class="ip_cell review_add_photos">
-				<button type="button" class="button gray medium attach_file_simulate">Добавить фото</button>
-				<span class="attach_notes">Вы можете прикрепить до 4 фото весом не более 3 Мб.</span>
-				<input type="file" id="attach_file" class="hidden" accept=".jpg,.jpeg" />
-			</div>
-			<div class="ip_photos">
-				<div class="ip_photo">
-					<a href="#" class="ip_photo_remove">x</a>
-					<img src="img/rev_1.jpg" alt="">
-				</div>
-				<div class="ip_photo">
-					<a href="#" class="ip_photo_remove">x</a>
-					<img src="img/rev_1.jpg" alt="">
-				</div>
-			</div>
-			<div class="modal_buttons">
-				<button class="button medium send_button" type="submit">Отправить отзыв</button>
-			</div>
-			<div class="ip_cell agree_box agree_photos">
-				<input type="checkbox" class="ch agree_ch" checked />
-				<label>Я согласен с правилами публикации пользовательского контента.</label>
-			</div>
-		</form>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-
-<div class="modal" id="add_address_modal">
-	<div class="modal_content">
-		<h2 class="modal_title">Добавить новый адрес</h2>
-		<a href="#" class="modal_close">x</a>
-		<form action="" method="post">
-			<div class="ip_cell">
-				<div>
-					<input type="radio" class="rd" name="delivery-modal" />
-					<label>Самовывоз</label>
-					<input type="radio" class="rd" name="delivery-modal" />
-					<label>Доставка по адресу</label>
-				</div>
-			</div>
-			<div class="ip_cell">
-				<input type="text" class="input_text" placeholder="Укажите город доставки" />
-			</div>
-			<div class="ip_cell">
-				<input type="text" class="input_text" placeholder="Укажите адрес доставки" />
-			</div>
-			<div class="modal_buttons">
-				<button class="button medium" type="submit">+ Добавить адрес</button>
-			</div>
-		</form>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-<a href="#" class="minicart_open visible">
-	<span class="minicart_count">17</span>
-	<div class="button"><img src="img/i_cart_big.png" alt="" /></div>
-</a>
-
-
-<div class="modal" id="modal_minicart">
-	<div class="minicart_content">
-		<header>
-			<h2 class="modal_title">Ваша корзина</h2>
-			<a href="#" class="modal_close">x</a>
-		</header>
-		<section class="minicart_list mCustomScrollbar">
-			
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="product_price_old">89390 ₽</div>
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-			
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-			
-			<!-- PRODUCT -->
-			<div class="minicart_product">
-				<div class="minicart_product-image"><img src="img/prod_1.jpg" alt="" /></div>
-				<div class="minicart_product-content">
-					<a href="" class="minicart_product-title">Сковорода для жарки ALLENDE 24х5,5см (алюминий)</a>
-					<div class="minicart_product-price_box">
-						<div class="minicart_product-price">1390 ₽</div>
-					</div>
-					<div class="minicart_product-counter_row">
-						<div class="counter_big_box">
-							<button type="button" class="counter_big_ctrl minus">-</button>
-							<input type="text" class="counter_big_input" value="1" data-min="1" data-max="99" />
-							<button type="button" class="counter_big_ctrl plus">+</button>
-						</div>
-						<a href="#" class="minicart_product-remove">x</a>
-					</div>
-				</div>
-			</div>
-			
-		</section>
-		<footer class="minicart_footer">
-			<div class="minicart_total_price">Итого: <b>3495 ₽</b></div>
-			<p>Чтобы узнать стоимость доставки, перейдите к оформлению заказа.</p>
-
-			<div class="minicart_buttons">
-				<a href="order.html" class="button medium">Оформить заказ</a>
-				<a href="basket.html" class="button-o gray medium">Перейти к корзине</a>
-			</div>
-		</footer>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-
-<div class="modal" id="cities_modal">
-	<div class="modal_content">
-		<h2 class="modal_title">Выберите город</h2>
-		<a href="#" class="modal_close">x</a>
-		<form action="" method="post">
-			<div class="cities_list">
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Москва</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Волгоград</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Воронеж</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Екатеринбург</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Казань</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Краснодар</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Красноярск</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Нижний Новгород</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Новосибирск</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Пермь</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Ростов-на-Дону</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Самара</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" checked />
-					<label>Санкт-Петербург</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Уфа</label>
-				</div>
-				<div class="ip_city">
-					<input type="radio" class="rd" name="city" />
-					<label>Челябинск</label>
-				</div>
-			</div>
-
-			<div class="another_city_box">
-				<label>Или укажите в поле:</label>
-				<div class="flex">
-					<div class="ip_cell relative">
-						<input type="text" class="input_text another_city" placeholder="Введите название города" />
-						<div class="cities_dropdown">
-							<a class="city_dropdown" href=""><b>Иван</b>теевка, Московская обл.</a>
-							<a class="city_dropdown" href=""><b>Иван</b>ово, Московская обл.</a>
-						</div>
-					</div>
-					<button class="button medium choice_city"  type="submit" disabled>Выбрать</button>
-				</div>
-			</div>
-			<script>
-				$(document).ready(function(){
-					$('.another_city').on('change keyup', function(){
-						if ( $(this).val() != '' ) {
-							$('.cities_dropdown').show();
-							$('.choice_city').removeAttr('disabled');
-						} else {
-							$('.cities_dropdown').hide();
-							$('.choice_city').attr('disabled', true);
-						}
-					});
-
-					$('.city_dropdown').click(function(){
-						let cityName = $(this).text();
-						$('.another_city').val(cityName);
-						$('.cities_dropdown').hide();
-						return false;
-					});
-				});
-			</script>
-		</form>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
-
-
-
-<div class="modal" id="login_modal">
-	<div class="modal_content">
-		<a href="#" class="modal_close">x</a>
-		<h2 class="modal_title">Вход</h2>
-		<form action="cabinet.html" method="post" class="auth_form">
-			<div class="ip_cell">
-				<input type="text" class="input_text" placeholder="Логин" />
-			</div>
-			<div class="ip_cell">
-				<input type="password" class="input_text" placeholder="Пароль" />
-			</div>
-			<div class="login_links">
-				<div>
-					<input type="checkbox" class="ch" />
-					<label>Сохранить пароль</label>
-				</div>
-				<a href="">Восстановить пароль</a>
-			</div>
-			<div class="auth_buttons">
-				<button class="button medium" type="submit">Войти</button>
-				<a href="" class="button-o medium gray">Зарегистрироваться</a>
-			</div>
-		</form>
-	</div>
-	<div class="modal_overlay"></div>
-</div>
 {% include 'js_files.html' %}
 
 </body>
